[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/gui/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 4
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.509804, 0.509804, 0.509804, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -121.0
margin_right = 169.0
margin_bottom = 121.0
mouse_filter = 2
size_flags_vertical = 4
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -179.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = -162.0
margin_right = -39.0
margin_bottom = -24.0
custom_constants/separation = 20

[node name="ResumeButton" type="Button" parent="Panel/HBoxContainer"]
margin_right = 260.0
margin_bottom = 59.0
focus_neighbour_left = NodePath("../QuitToMainMenuButton")
focus_neighbour_top = NodePath("../QuitToMainMenuButton")
focus_neighbour_right = NodePath("../QuitToMainMenuButton")
focus_neighbour_bottom = NodePath("../QuitToMainMenuButton")
focus_next = NodePath("../QuitToMainMenuButton")
focus_previous = NodePath("../QuitToMainMenuButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="QuitToMainMenuButton" type="Button" parent="Panel/HBoxContainer"]
margin_top = 79.0
margin_right = 260.0
margin_bottom = 138.0
focus_neighbour_left = NodePath("../ResumeButton")
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_right = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../ResumeButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit to main menu"

[node name="IconButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 63.0

[node name="HBoxContainer" type="HBoxContainer" parent="IconButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 15

[node name="Panel" type="Panel" parent="IconButton/HBoxContainer"]
margin_right = 21.0
margin_bottom = 53.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="Panel" parent="IconButton/HBoxContainer"]
margin_left = 36.0
margin_right = 57.0
margin_bottom = 53.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="Panel/HBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/QuitToMainMenuButton" to="." method="_on_QuitToMainMenuButton_pressed"]
[connection signal="pressed" from="IconButton" to="." method="_on_IconButton_pressed"]
